z-index fix

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -61,7 +61,6 @@ article {
       padding-top: $em;
       position: relative;
       width: 70%;
-      z-index: 100;
 
       .copy {
         display: none;
