--- a/style.css
+++ b/style.css
@@ -549,8 +549,7 @@ article.recent {
     overflow: hidden;
     padding-top: 0.875em;
     position: relative;
-    width: 70%;
-    z-index: 100; }
+    width: 70%; }
     article.recent .meta .copy {
       display: none;
       font-size: .9em;
